apps/bazarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bazarr
      app.kubernetes.io/name: bazarr
  serviceName: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: bazarr
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: http
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 6767
          readinessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            periodSeconds: 10
            tcpSocket:
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 25m
              memory: 309Mi
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
            readOnlyRootFilesystem: false
      securityContext:
        fsGroup: 1000
      volumes:
        - name: rclone-config
          configMap:
            name: bazarr-rclone
        - name: run
          emptyDir:
            medium: Memory
        - name: startup-config
          secret:
            secretName: bazarr
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
