apps/bazarr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 6767
      targetPort: http
  selector:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/name: bazarr
