apps/bazarr/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
spec:
  rules:
    - backendRefs:
        - name: bazarr
          port: http
